Added image upload to cloudflare r2